<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="wrap_content"
			  android:layout_height="match_parent"
			  android:padding="8dp">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="14sp"
		android:minWidth="500dp"
		android:textColor="@color/text_black"
		android:text="@string/please_select_the_type_of_test_you_want_to_take"/>

	<TextView
		android:layout_marginTop="8dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/exam_name"/>

	<Spinner
		android:id="@+id/examNameSP"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_marginTop="8dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/exam_year"/>

	<Spinner
		android:id="@+id/examYearSP"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<Button
		android:id="@+id/createPreviousTestBtn"
		android:paddingRight="8dp"
		android:paddingLeft="8dp"
		android:layout_gravity="center"
		android:background="@drawable/rounded_corner_solid_dark_yellow"
		android:textColor="@color/text_black"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/create_test"/>

</LinearLayout>