<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
	android:minWidth="300dp">

    <View
        android:layout_width="200dp"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/prepondPlanTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prePone"
        android:padding="16dp"
        android:textColor="@color/text_black"
        android:background="@drawable/rounded_corner_gary" />

    <TextView
        android:id="@+id/postpondPlanTV"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postPone"
        android:padding="16dp"
        android:textColor="@color/text_black"
        android:background="@drawable/rounded_corner_gary" />

    <TextView
        android:id="@+id/pausePlanTV"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:padding="16dp"
        android:textColor="@color/text_black"
        android:background="@drawable/rounded_corner_gary" />

    <TextView
        android:id="@+id/replanPlanTV"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Replan"
        android:padding="16dp"
        android:textColor="@color/text_black"
        android:background="@drawable/rounded_corner_gary" />

    <TextView
        android:id="@+id/postponeByDayPlanTV"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postponeByDay"
        android:padding="16dp"
        android:textColor="@color/text_black"
        android:background="@drawable/rounded_corner_gary" />

</LinearLayout>