<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/scrollView1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/loginEmailTextView"
			android:layout_alignParentLeft="true"
			android:background="@color/text_white"
			android:scrollbars="none">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="20dp">

		<TextView
			android:id="@+id/loginTitleBarTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:background="@color/action_bar_background_blue"
			android:gravity="center"
			android:padding="30dp"
			android:text="@string/app_name"
			android:textColor="@color/text_white"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/loginEmailTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginTitleBarTextView"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="25dp"
			android:text="@string/emailaddr"
			android:textColor="@color/text_black"
			android:textSize="15sp"/>

		<EditText
			android:id="@+id/loginEmailEditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginEmailTextView"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="10dp"
			android:textCursorDrawable="@null"
			android:background="@drawable/rounded_corner_gary"
			android:hint="@string/hintemail"
			android:imeOptions="actionNext"
			android:inputType="textEmailAddress"
			android:nextFocusForward="@+id/loginPasswordEditText"
			android:padding="15dp"
			android:textColor="@color/text_black"
			android:textColorHint="@color/text_gray"
			android:textSize="15sp"></EditText>

		<TextView
			android:id="@+id/loginPasswordTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginEmailEditText"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:text="@string/password"
			android:textColor="@color/text_black"
			android:textSize="15sp"/>

		<EditText
			android:id="@+id/loginPasswordEditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginPasswordTextView"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/rounded_corner_gary"
			android:hint="@string/hintpassword"
			android:textCursorDrawable="@null"
			android:cursorVisible="true"
			android:imeOptions="actionGo"
			android:inputType="textPassword"
			android:padding="15dp"
			android:textColor="@color/text_black"
			android:textColorHint="@color/text_gray"
			android:textSize="15sp"></EditText>

		<Button
			android:id="@+id/loginSigninButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:padding="12dp"
			android:layout_below="@+id/loginPasswordEditText"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/rounded_corner_solid_yellow"
			android:text="@string/signin"
			android:textColor="@color/text_white"
			android:textSize="15sp"/>

		<TextView
			android:id="@+id/loginForgotPassTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/loginSigninButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/forgetpass"
			android:textColor="@color/text_gray"
			android:textSize="15sp"/>

		<View
			android:id="@+id/loginViewSeperatorBar"
			android:layout_width="wrap_content"
			android:layout_height="1dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginForgotPassTextView"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:background="@color/text_gray"/>

		<TextView
			android:id="@+id/loginNotMemberTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginViewSeperatorBar"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:text="@string/not_member"
			android:textColor="@color/text_black"
			android:textSize="15sp"/>

		<Button
			android:id="@+id/loginRegisterButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginNotMemberTextView"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/rounded_corner_solid_light_yellow"
			android:drawableRight="@drawable/right_arrow_small"
			android:gravity="left|center"
			android:padding="12dp"
			android:text="@string/register"
			android:textColor="@color/text_white"
			android:textSize="15sp"/>

		<Button
			android:id="@+id/loginGuestButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/loginRegisterButton"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/rounded_corner_solid_light_yellow"
			android:drawableRight="@drawable/right_arrow_small"
			android:gravity="left|center"
			android:padding="12dp"
			android:text="@string/use_guest"
			android:textColor="@color/text_white"
			android:textSize="15sp"/>
	</RelativeLayout>

</ScrollView>